# SOEM

./: CMakeLists.txt  README.md
osal/erika/: osal.c  osal_defs.h
oshw/erika/: nicdrv.c  nicdrv.h  oshw.c  oshw.h
soem/: ethercatconfig.c
